--- a/directive/introduction.html
+++ b/directive/introduction.html
@@ -101,7 +101,7 @@
       </thead>
       <tbody>
         <tr>
-          <td><a href="directive/lifeCycle">Life cycle directive</a></td>          
+          <td><a href="directive/lifeCycle">LifeCycle directive</a></td>          
           <td>+</td>
           <td>✔️</td>
           <td class="trigger">Element creation or destruction</td>
