--- a/directive/expression.html
+++ b/directive/expression.html
@@ -38,7 +38,7 @@
       <div>指令表达式执行完成后的返回值称为指令的执行结果。</div>
       <div>请注意，如果指令表达式的返回值是一个<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise">Promise</a>对象，那么指令的执行结果是指此Promise处于已兑现（fulfilled）状态之后的结果值。</div>
       <div>dagger.js会对指令表达式的执行结果进行进一步处理以触发页面状态或数据更新。</div>
-      <div>对不同类型的指令表达式的执行结果有不同的处理方式，在后面的章节中我们会分别进行介绍。</div>
+      <div>框架对不同类型的指令表达式的执行结果有不同的处理方式，在后面的章节中我们会分别进行介绍。</div>
     </div>
   </template>
   <template *exist="language == 'enUS'">
@@ -80,7 +80,7 @@
       <div>The return value of the directive expression is called the execution result of the directive.</div>
       <div>Please note that if the return value of an expression is a <a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise">Promise</a> object, the execution result of the directive refers to the result value of the Promise after it is fulfilled.</div>
       <div>dagger.js will further process the execution result of the directive expression to trigger page status or data updates.</div>
-      <div>The handling of the execution result of different types of directive expressions will be introduced in the subsequent chapters.</div>
+      <div>The framework has different processing strategies for different types of directive expressions, which will be introduced in the subsequent chapters.</div>
     </div>
   </template>
 </div>
