--- a/directive/load.html
+++ b/directive/load.html
@@ -1,13 +1,13 @@
-<template *exist="language == 'zhCN'">
-  <h2>${ $['directive.load'] }</h2>
-  <div class="content">
+<div class="content">
+  <template *exist="language == 'zhCN'">
+    <h2>指令 / +load</h2>
     <h3 class="question">+load指令的作用</h3>
-    <div class="answer">“+load”指令在宿主元素挂载到DOM树之前（加载中阶段）由框架触发调用，主要用于创建<a href="directive/scope">自定义作用域</a>对象。</div>
+    <div class="answer">“+load”指令在宿主元素挂载到DOM树之前（加载中阶段）由框架触发调用，主要用于创建<a href="directive/scope">作用域</a>对象。</div>
     <h3 class="question">+load指令的执行结果</h3>
     <div class="answer">
-      <div>当“+load”指令表达式的执行结果是一个<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object">平凡对象</a>时，dagger.js将构造此对象的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Proxy">代理对象</a>并将其设置为新的自定义作用域。</div>
-      <div>如果“+load”指令表达式的执行结果是一个代理对象，dagger.js将此对象直接设置为新的自定义作用域。</div>
-      <div>如果“+load”指令表达式的执行结果不是平凡对象或代理对象，则不会创建新的自定义作用域。</div>
+      <div>当“+load”指令表达式的执行结果是一个<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object">平凡对象</a>时，dagger.js将构造此对象的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Proxy">代理对象</a>并将其设置为新的作用域。</div>
+      <div>如果“+load”指令表达式的执行结果已经是一个代理对象，dagger.js将此对象直接设置为新的作用域。</div>
+      <div>如果“+load”指令表达式的执行结果不是平凡对象或代理对象，则不会创建新的作用域。</div>
       我们来看一个例子：
       <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +load" src="https://codepen.io/dagger8224/embed/wvyoepB?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/dagger8224/pen/wvyoepB">
@@ -22,15 +22,32 @@
         [dagger-demo] +load (root directive)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
         on <a href="https://codepen.io">CodePen</a>.
       </iframe>
+      <div>可以删除掉root修饰符对比修改前后的结果。</div>
     </div>
-  </div>
-</template>
-<template *exist="language == 'enUS'">
-  <h2>${ $['directive.load'] }</h2>
-  <div class="content">
-    <template *each="$['directive.load.sections']">
-      <h3 class="question">${ item.question }</h3>
-      <div class="answer" *html="item.answer"></div>
-    </template>
-  </div>
-</template>
+  </template>
+  <template *exist="language == 'enUS'">
+    <h2>Directive / +load</h2>
+    <h3 class="question">What is the usage of the +load directive?</h3>
+    <div class="answer">The "+load" directive is called by the framework before the host element is mounted to the DOM tree (loading stage). It is mainly used to create a <a href="directive/scope">scope</a> object.</div>
+    <h3 class="question">What is the result of the +load directive?</h3>
+    <div class="answer">
+      <div>When the +load directive expression evaluates to a <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object">plain object</a>, dagger.js will create a Proxy for that object and set it as the new scope.</div>
+      <div>If the +load expression result is already a Proxy, dagger.js will use it directly as the new scope.</div>
+      <div>If the result is neither a plain object nor a Proxy, no new scope will be created.</div>
+      Let's take a look at an example:
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +load" src="https://codepen.io/dagger8224/embed/wvyoepB?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/wvyoepB">
+        [dagger-demo] +load</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+    </div>
+    <h3 class="question">What are the pre-defined decorators of the +load directive?</h3>
+    <div class="answer">The "+load" directive supports a boolean type of pre-defined directive decorators, "root", which means that the scope created by the current directive directly inherits from the <a href="directive/scope">root scope</a> instead of its parent scope. Let's take a look at an example:</div>
+    <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +load (root directive)" src="https://codepen.io/dagger8224/embed/NWYWGWR?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+      See the Pen <a href="https://codepen.io/dagger8224/pen/NWYWGWR">
+      [dagger-demo] +load (root directive)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+      on <a href="https://codepen.io">CodePen</a>.
+    </iframe>
+    <div>You may remove the "root" decorator to compare the results before and after the modification.</div>
+  </template>
+</div>
